<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <GridView
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fillViewport="true"
        android:numColumns="6"
        android:stretchMode="columnWidth" />


    <Button
        android:id="@+id/raz_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/raz_btn_label" />

    <Button
        android:id="@+id/new_game_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/new_game_btn_label" />

    <Button
        android:id="@+id/help_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/help_btn_label" />

    <Button
        android:id="@+id/rules_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/rules_btn_label" />


</LinearLayout>